# PyUAlg

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
examples/: __init__.py  lattice.py  oml.py
pyualg/: core.py  parser.py  test_parser.py
