[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyualg"
version = "0.1"
description = "Python framework for the universal algebra."
authors = [
    { name="Yingte Xu", email="lucianoxu@foxmail.com" }
]
readme = "README.md"
requires-python = ">=3.6"
license = { file="LICENSE" }

[tool.setuptools.packages.find]
where = ["."]